Wrap content into a fixed container

--- a/media/css/styles.sass
+++ b/media/css/styles.sass
@@ -5,6 +5,7 @@ $font-stack:    'Source Sans Pro', Helvetica, sans-serif
 $primary-color: #333
 $padding-side:  38px
 $media_path:    "/media/"
+$width:         950px
 
 @import "image-set"
 
@@ -21,8 +22,13 @@ body
   display: flex
   flex-direction: column
 
+.container
+  width: 100%
+  max-width: $width
+  margin: 0 auto
+
 header
-  padding: 22px $padding-side 200px $padding-side
+  padding: 22px $padding-side 0 $padding-side
   background: #3D2250
 
   section
@@ -59,7 +65,7 @@ header
     ul
       margin-top: -25px
       list-style-type: none
-      position: fixed
+      float: right
       right: $padding-side - 22px
       li
         display: inline
@@ -84,28 +90,27 @@ header
   #phone
     height: 341px
     width: 229px
-    right: 155px
-    margin-top: -120px
-    position: fixed
+    float: right
+    margin-top: -140px
+    padding-left: 90px
+    background-repeat: no-repeat
     @include image-set($media_path + "img/rocket", "png")
 
   #back-clouds
     margin-top: 60px
     margin-left: -$padding-side
-    position: fixed
+    margin-right: -$padding-side
     background-repeat: repeat-x
-    width: 100%
     height: 136px
 
     @include image-set($media_path + "img/back-cloud", "png")
 
   #front-clouds
     margin-left: -$padding-side
-    margin-top: 100px
-    position: fixed
+    margin-top: -100px
     background-repeat: repeat-x
-    width: 100%
-    height: 136px
+    margin-right: -$padding-side
+    height: 115px
 
     @include image-set($media_path + "img/front-cloud", "png")
 
@@ -118,6 +123,7 @@ section#body
   display: flex
   padding-top: 45px
   text-align: center
+  margin: 0 auto
 
   article
     width: 150px
@@ -139,7 +145,6 @@ section#body
     @include image-set($media_path + "img/traffic-icon", "png")
 
 
-@media screen and (max-width: 640px)
+@media screen and (max-width: 580px)
   #phone
-    left: 220px
-    right: auto
+    padding-left: 0 !important
